objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Referral_Type__c</fullName>
        <formula>TEXT(Account.Type_of_Referral_Organization_Agency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Referral Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveMilitary__c</fullName>
        <description>Yes, No, Not Applicable</description>
        <label>Active Military</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ActiveMilitary</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliate_Type__c</fullName>
        <label>Affiliate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Government Organization</fullName>
                </value>
                <value>
                    <fullName>Realtor</fullName>
                </value>
                <value>
                    <fullName>Banker</fullName>
                </value>
                <value>
                    <fullName>Appraiser</fullName>
                </value>
                <value>
                    <fullName>Home Inspector</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Closing Agent</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>203K Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(TODAY()) - YEAR(Birthdate) - IF(MONTH(TODAY()) * 100 + DAY(TODAY()) &lt; MONTH(Birthdate) * 100 + DAY(Birthdate), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualHouseholdIncome__c</fullName>
        <formula>HouseholdMonthlyIncome1__c * 12</formula>
        <label>Annual Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AreaMedianIncome__c</fullName>
        <label>Area Median Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below 30% of AMI</fullName>
                </value>
                <value>
                    <fullName>30 - 49% of AMI</fullName>
                </value>
                <value>
                    <fullName>50 - 79% of AMI</fullName>
                </value>
                <value>
                    <fullName>80 - 100% of AMI</fullName>
                </value>
                <value>
                    <fullName>101% - 120% of AMI</fullName>
                </value>
                <value>
                    <fullName>Above 120% of AMI</fullName>
                </value>
                <value>
                    <fullName>Chose not to respond</fullName>
                </value>
                <value>
                    <fullName>Above 100% AMI</fullName>
                    <isActive>false</isActive>
                    <label>Above 100% AMI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AuthorizationToReleaseInformation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>authorized to release information</description>
        <label>Authorization to Release Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Besttimetocontact__c</fullName>
        <description>Contact’s preferred time to be contacted</description>
        <label>Best Time to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Weekend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChoseNottoProvideIncome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chose Not to Provide Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientHUDAssistance__c</fullName>
        <label>Client HUD Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rental Voucher</fullName>
                </value>
                <value>
                    <fullName>Place Based Rental Assistance</fullName>
                </value>
                <value>
                    <fullName>Home Ownership Voucher</fullName>
                </value>
                <value>
                    <fullName>Purchase REO Property</fullName>
                </value>
                <value>
                    <fullName>Down Payment Assistance</fullName>
                </value>
                <value>
                    <fullName>Other HUD Program</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>Account.ClientNumber__c</formula>
        <label>Client #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColoniasResidence__c</fullName>
        <label>Colonias Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactsSpecialty__c</fullName>
        <label>Contacts Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondingPortalUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corresponding Portal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountyMSA__c</fullName>
        <label>County/MSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditScore__c</fullName>
        <label>Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentResidence__c</fullName>
        <description>Own, Rent, Others</description>
        <label>Current Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CurrentResidenceContact</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateAMILastCalculated__c</fullName>
        <label>Date AMI Last Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DesiredService__c</fullName>
        <label>Desired Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Capability Counseling</fullName>
                </value>
                <value>
                    <fullName>Disaster Preparedness Counseling</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery Counseling</fullName>
                </value>
                <value>
                    <fullName>Homeless Counseling</fullName>
                </value>
                <value>
                    <fullName>Homeowner Counseling</fullName>
                </value>
                <value>
                    <fullName>Mortgage Delinquency Assistance Counseling</fullName>
                </value>
                <value>
                    <fullName>Pre-purchase/Homebuying Counseling</fullName>
                </value>
                <value>
                    <fullName>Rental Topics Counseling</fullName>
                </value>
                <value>
                    <fullName>Reverse Mortgage Counseling</fullName>
                </value>
                <value>
                    <fullName>Reverse Mortgage Delinquency Counseling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisabledDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if disabled dependent</description>
        <label>Disabled Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisabledStatus__c</fullName>
        <label>Disabled Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if disabled</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>Pre-defined list</description>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Education</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmploymentStatus__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full-Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part-Time</fullName>
                </value>
                <value>
                    <fullName>Unemployed AND Looking for Work</fullName>
                </value>
                <value>
                    <fullName>Unable to Work Due to Disability</fullName>
                </value>
                <value>
                    <fullName>Stay-at-Home Caregiver OR Parent</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Employed Full-Time AND Student</fullName>
                </value>
                <value>
                    <fullName>Employed Part-Time AND Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnglishProficiency__c</fullName>
        <description>Reflects overall level of English proficiency within the same household as the contact.</description>
        <inlineHelpText>English Proficiency of the primary client</inlineHelpText>
        <label>English Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Limited_English_Proficiency_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>Client’s self-identified ethnicity, used in 9902 reporting</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EvaluateHUDAMI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EvaluateHUDAMI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FarmWorker__c</fullName>
        <label>Farm Worker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Male, Female, Other/Non-Conforming</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HouseholdMonthlyIncome1__c</fullName>
        <label>Household Monthly Income</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HouseholdOfAMI__c</fullName>
        <label>Household % Of AMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HouseholdSize__c</fullName>
        <description>Number of people in the household</description>
        <inlineHelpText>Total number of people living in the same household</inlineHelpText>
        <label>Household Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdType__c</fullName>
        <label>Household Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MaritalStatus__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>HouseholdTypeHeadofHousehold</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HousingChoiceVoucher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if receiving housing voucher</description>
        <label>Housing Choice Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HowDidYouHearAboutUs__c</fullName>
        <description>The field is used to gather information about how individuals discovered a product or service.</description>
        <label>How Did You Hear About Us</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Banker</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Project Own App</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InPersonGroupEducationHours__c</fullName>
        <inlineHelpText>Total hours of In-Person group education provided by your agency.</inlineHelpText>
        <label>In-Person Group Education Hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LicenseNumber__c</fullName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingAddressLine2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritalStatus__c</fullName>
        <description>Pre-defined  list</description>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MaritalStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketingCommunicationsOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Communications Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetropolitanStatisticalArea__c</fullName>
        <label>Metropolitan Statistical Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyCreditorsDebt__c</fullName>
        <label>Monthly Creditor’s Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyIncomeSource__c</fullName>
        <description>Client Monthy Income Source (i.e. SS, Disability, W2, etc)</description>
        <inlineHelpText>Client Monthy Income Source (i.e. SS, Disability, W2, etc)</inlineHelpText>
        <label>Monthly Income Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employment Salary</fullName>
                </value>
                <value>
                    <fullName>Self-Employment Income</fullName>
                </value>
                <value>
                    <fullName>Rental Income</fullName>
                </value>
                <value>
                    <fullName>Investment Income</fullName>
                </value>
                <value>
                    <fullName>Pension</fullName>
                </value>
                <value>
                    <fullName>Social Security</fullName>
                </value>
                <value>
                    <fullName>Alimony</fullName>
                </value>
                <value>
                    <fullName>Child Support</fullName>
                </value>
                <value>
                    <fullName>Government Assistance (e.g., unemployment benefits)</fullName>
                </value>
                <value>
                    <fullName>Business Income</fullName>
                </value>
                <value>
                    <fullName>Royalties</fullName>
                </value>
                <value>
                    <fullName>Dividends</fullName>
                </value>
                <value>
                    <fullName>Capital Gains</fullName>
                </value>
                <value>
                    <fullName>Freelance or Gig Work</fullName>
                </value>
                <value>
                    <fullName>Trust Fund Distributions</fullName>
                </value>
                <value>
                    <fullName>Annuity Payments</fullName>
                </value>
                <value>
                    <fullName>Disability Benefits</fullName>
                </value>
                <value>
                    <fullName>Scholarships or Grants</fullName>
                </value>
                <value>
                    <fullName>Other (for any income sources not covered by the above options)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberOfDependents__c</fullName>
        <label>Number of Dependents</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OccupationStartDate__c</fullName>
        <label>Occupation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnlineGroupEducationHours__c</fullName>
        <inlineHelpText>Total hours of online group education provided by your agency.</inlineHelpText>
        <label>Online Group Education Hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PleaseSpecify__c</fullName>
        <description>The &quot;PleaseSpecify&quot; text field is used to gather additional details when users select &quot;Others&quot; in a related field.</description>
        <label>Please specify how you heard about us</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredLanguage__c</fullName>
        <description>Client’s preferred language</description>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English (US)</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>ASL</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Chinese Mandarin</fullName>
                </value>
                <value>
                    <fullName>Creole</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Goboligok</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hmong</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Swahili</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Ukrainian</fullName>
                </value>
                <value>
                    <fullName>Urdu</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Yiddish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrivacyNoticeOptOut1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in ORS reporting.</description>
        <inlineHelpText>Customer does not want demographic information shared.</inlineHelpText>
        <label>Privacy Notice Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>Which HUD 9902-recognized race category the contact belongs to.</description>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferralSource__c</fullName>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ReferralSource</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referredby__c</fullName>
        <label>Referred by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipToPrimaryApplicant__c</fullName>
        <description>contact relationship to primary contact</description>
        <inlineHelpText>If applicable</inlineHelpText>
        <label>Relationship to Primary Applicant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Other Relative</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Step-Daughter</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewDisclosuresforElectronicConsent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Electronic Consent Disclosures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RuralAreaStatus__c</fullName>
        <description>Whether or not this contact resides in a rural area as defined by HUD.</description>
        <label>Rural Area Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rural_Area_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <description>Client Social Security Number</description>
        <label>SSN</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <label>Speciality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Home Insurance</fullName>
                </value>
                <value>
                    <fullName>Retail Banking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalMonthlyIncome__c</fullName>
        <label>Total Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationCombined1__c</fullName>
        <formula>IF(
(ISBLANK(MailingCity) ||
ISBLANK(MailingState) ||
ISBLANK(MailingPostalCode) ||
ISPICKVAL(MaritalStatus__c, &apos;&apos;) ||
ISPICKVAL(Education__c, &apos;&apos;) ||
ISPICKVAL(FarmWorker__c, &apos;&apos;) ||
ISPICKVAL(ColoniasResidence__c, &apos;&apos;) ||
ISPICKVAL(DisabledStatus__c, &apos;&apos;) ||
ISBLANK(NumberOfDependents__c) ||
ISPICKVAL(PreferredLanguage__c, &apos;&apos;) || isInvalidZip__c || EvaluateHUDAMI__c) , 

(IF(ISBLANK(MailingCity), &apos;Mailing City, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(MailingState), &apos;Mailing State, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(MailingPostalCode), &apos;Mailing Zip/Postal Code, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(MaritalStatus__c, &apos;&apos;), &apos;Marital Status, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(Education__c, &apos;&apos;), &apos;Education, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(FarmWorker__c, &apos;&apos;), &apos;Farm Worker, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(ColoniasResidence__c, &apos;&apos;), &apos;Colonias Residence, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(DisabledStatus__c, &apos;&apos;), &apos;Disabled Status, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(NumberOfDependents__c), &apos;Number Of Dependents, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(PreferredLanguage__c, &apos;&apos;), &apos;Preferred Language, &apos;, &apos;&apos;) &amp;
IF(isInvalidZip__c, &apos;Invalid Zip Code/County/Town Entered! &apos;, &apos;&apos;) &amp;
IF(EvaluateHUDAMI__c , &apos;Please Search County By Zip Code to Calculate HUD AMI&apos;,&apos;&apos;)), &quot;NO ERROR&quot;
)</formula>
        <label>Validation Combined1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationCombined__c</fullName>
        <formula>IF(
    ISPICKVAL(Race__c, &apos;&apos;) ||
    ISPICKVAL(Ethnicity__c, &apos;&apos;) ||
    ISPICKVAL(HouseholdType__c, &apos;&apos;) ||
    ISBLANK(HouseholdSize__c) ||
    ISPICKVAL(RuralAreaStatus__c, &apos;&apos;) ||
    ISPICKVAL(EnglishProficiency__c, &apos;&apos;) ||
    AND(Not(ChoseNottoProvideIncome__c), OR(ISBLANK(HouseholdMonthlyIncome1__c), HouseholdMonthlyIncome1__c == 0)),
    
    &apos;Required field(s) missing: &apos; &amp;
    IF(ISPICKVAL(Race__c, &apos;&apos;), &apos;Race, &apos;, &apos;&apos;) &amp;
    IF(ISPICKVAL(Ethnicity__c, &apos;&apos;), &apos;Ethnicity, &apos;, &apos;&apos;) &amp;
    IF(ISPICKVAL(HouseholdType__c, &apos;&apos;), &apos;Household Type, &apos;, &apos;&apos;) &amp;
    IF(ISBLANK(HouseholdSize__c), &apos;Household Size, &apos;, &apos;&apos;) &amp;
    IF(ISPICKVAL(RuralAreaStatus__c, &apos;&apos;), &apos;Rural Area Status, &apos;, &apos;&apos;) &amp;
    IF(ISPICKVAL(EnglishProficiency__c, &apos;&apos;), &apos;English Proficiency, &apos;, &apos;&apos;) &amp;
    IF(AND(Not(ChoseNottoProvideIncome__c), OR(ISBLANK(HouseholdMonthlyIncome1__c), HouseholdMonthlyIncome1__c == 0)), &apos;Household Monthly Income &apos;, &apos;&apos;), &quot;&quot; )</formula>
        <label>Validation Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <description>Yes, No, Not Applicable</description>
        <label>Veteran</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Veteran</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1stTimeHomeBuyer__c</fullName>
        <description>Yes, No</description>
        <inlineHelpText>Must not have owned a home within the last 3 years.</inlineHelpText>
        <label>1st Time Home Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>X1stTimeHomeBuyer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Direct_Phoneline__c</fullName>
        <label>Direct Phoneline</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cic_credit__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Length_of_Stay_in_years__c</fullName>
        <label>Length of Stay ( in years )</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>